Fixed loading of Scale and Rotate of the predefined brushes

This patch also removes a significant portion of outdated code.

BUG:322229