krita/plugins/paintops/libbrush/kis_gbr_brush.cpp
@@ -477,8 +477,8 @@ void KisGbrBrush::toXML(QDomDocument& d, QDomElement& e) const
     e.setAttribute("type", "gbr_brush");
     e.setAttribute("filename", shortFilename());
     e.setAttribute("spacing", QString::number(spacing()));
-    e.setAttribute("angle", QString::number(KisBrush::angle()));
-    e.setAttribute("scale", QString::number(KisBrush::scale()));
+    e.setAttribute("angle", QString::number(angle()));
+    e.setAttribute("scale", QString::number(scale()));
     KisBrush::toXML(d, e);
 }
 
